--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ARA Portfolio</title>
     <meta name="description" content="programmer portfolio" />
     <meta name="author" content="A.R.A" />
-
+    <link rel="icon" href="/PS-Portfolio/favicon.ico" />
     <meta property="og:title" content="A.R.A" />
     <meta property="og:description" content="programmer portfolio" />
     <meta property="og:type" content="website" />
